k8s/webhooks/k8s/mutating-webhook-config.yml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook
webhooks:
  - name: mutating-webhook.adlere.priv
    failurePolicy: Fail # Fail
    namespaceSelector:
      matchLabels:
        environment: t
    clientConfig:
      service:
        name: mutating-webhook
        namespace: webhook
        path: /mutate
      # cat /etc/origin/master/ca.bundle | base64 -w0
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM2akNDQWRLZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFtTVNRd0lnWURWUVFEREJ0dmNHVnUKYzJocFpuUXRjMmxuYm1WeVFERTFPRE16TVRVM09UY3dIaGNOTWpBd016QTBNRGsxTmpNNFdoY05NalV3TXpBegpNRGsxTmpNNVdqQW1NU1F3SWdZRFZRUUREQnR2Y0dWdWMyaHBablF0YzJsbmJtVnlRREUxT0RNek1UVTNPVGN3CmdnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUM2bjJ4WjJPNXV3T0pPenI1dmJPQU4KcHhpWEpRTEJPUlF1d2FhWWhoQVFhSjd5SmNZb0tkWFQ0RWpSRjNRNlExditBU2ROUXhvSnYvNlFweHdteVlldgpZZ1NWcTFlRzVV [...]
    rules:
      - apiGroups:   [""]
        apiVersions: ["*"]
        operations:  ["CREATE", "UPDATE"]
        resources:   ["pods"]
